fix spacing issues

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -61,16 +61,9 @@ nav {
   padding: 10px;
   background-color: black;
 }
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
 a {
   text-decoration: underline;
   color: silver;
-  padding: 0 0 0 3px;
 }
 nav a:hover {
   color: #c0c0c0bf;
@@ -86,7 +79,7 @@ footer {
   background-color: black;
   color: silver;
   text-decoration: underline;
-  padding-right: 10px;
+  padding: 0;
   font-size: 16px;
   border: none;
 }
@@ -98,8 +91,6 @@ footer {
   display: none;
   position: absolute;
   background-color: black;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 .dropdown-content a {
@@ -108,6 +99,7 @@ footer {
   text-decoration: none;
   display: block;
   padding-bottom: 5px;
+  padding-left: 3px;
 }
 .dropdown-content a:hover {background-color: black;}
 .dropdown:hover .dropdown-content {display: block;}
